translation-tool/inputs/source_meta/objects/HSvc_Categorywise_SmsCharge__mdt.object
<CustomObject>
    <fields>
        <fullName>HSvc_CategoryWiseSmsReceived__c</fullName>
        <label>CategoryWiseSmsReceived</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CategoryWiseSmsRetrived__c</fullName>
        <label>CategoryWiseSmsReverted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Preferences__c</fullName>
        <label>Contact Preferences Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_CategoryWiseSmsField__c</fullName>
        <label>CategoryWiseSmsField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HSvcCategorywiseSmsCharge</label>
    <pluralLabel>HSvcCategorywiseSmsCharges</pluralLabel>
</CustomObject>